--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,8 +40,11 @@ dependencies:
   flutter_riverpod: ^2.4.0
   freezed_annotation: ^2.4.1
   dio: ^5.3.3
+  flutter_hooks: ^0.20.3
+  go_router: ^11.1.3
 
 dev_dependencies:
+  freezed: ^2.4.2
   json_serializable: ^6.7.1
   riverpod_generator: ^2.3.2
   riverpod_lint: ^2.1.0
