--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,30 +29,31 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  dio: ^5.3.3
   flutter:
     sdk: flutter
+  get_it: ^7.6.0
+  flutter_hooks: ^0.20.3
+  flutter_riverpod: ^2.4.0
+  freezed_annotation: ^2.4.1
+  go_router: ^11.1.3
   google_fonts: ^6.1.0
-  shared_preferences: ^2.2.2
+  intl: ^0.18.1
   json_annotation: ^4.8.1
   path: ^1.8.3
   riverpod_annotation: ^2.1.5
-  intl: ^0.18.1
-  flutter_riverpod: ^2.4.0
-  freezed_annotation: ^2.4.1
-  dio: ^5.3.3
-  flutter_hooks: ^0.20.3
-  go_router: ^11.1.3
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
-  freezed: ^2.4.2
-  json_serializable: ^6.7.1
-  riverpod_generator: ^2.3.2
-  riverpod_lint: ^2.1.0
   build_runner: ^2.4.6
   custom_lint: ^0.5.3
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.4.2
+  json_serializable: ^6.7.1
+  riverpod_generator: ^2.3.2
+  riverpod_lint: ^2.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
