--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,13 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   dio: ^5.3.3
+  extended_image: ^8.1.1
   flutter:
     sdk: flutter
-  get_it: ^7.6.0
   flutter_hooks: ^0.20.3
   flutter_riverpod: ^2.4.0
   freezed_annotation: ^2.4.1
+  get_it: ^7.6.0
   go_router: ^11.1.3
   google_fonts: ^6.1.0
   intl: ^0.18.1
