--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   get_it: ^7.6.0
   go_router: ^11.1.3
   google_fonts: ^6.1.0
+  grouped_list: ^5.1.2
   intl: ^0.18.1
   json_annotation: ^4.8.1
   path: ^1.8.3
