--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,15 @@ dev_dependencies:
   riverpod_generator: ^2.3.2
   riverpod_lint: ^2.1.0
 
+  flutter_launcher_icons: "^0.13.1"
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.png"
+  min_sdk_android: 21 
+  
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
