--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dev_dependencies:
   build_runner: ^2.4.6
   custom_lint: ^0.5.3
   flutter_lints: ^2.0.0
+  mockito: ^5.4.2
   flutter_test:
     sdk: flutter
   freezed: ^2.4.2
